login and signup ui complete

--- a/src/components/Post/SingleItem.scss
+++ b/src/components/Post/SingleItem.scss
@@ -32,3 +32,14 @@
     min-width: 340px;
   }
 }
+
+.spost-section {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  .post-box {
+    width: 100%;
+  }
+}
